--- a/edit.html
+++ b/edit.html
@@ -349,7 +349,7 @@ function putTransaction(rawAddress,mosaics,message,callback){
 		networkType
 	).setMaxFee(100);
 
-	callback(tx3);
+	callback(tx3,address);
 /*
 	const payload = tx3.serialize();
 	location.href = `alice://sign?data=${payload}&type=request_sign_transaction&node=${sym.Convert.utf8ToHex(nodeUrl)}&method=announce&deadline=3600`;
@@ -366,7 +366,7 @@ function putTransaction(rawAddress,mosaics,message,callback){
 //	signedTx3 = alice.sign(tx3,generationHash);
 }
 
-const callbackSSS = function(tx3){
+const callbackSSS = function(tx3,address){
 	window.SSS.setTransaction(tx3);
 	window.SSS.requestSign().then((signedTx3) => {
 		// announce
@@ -378,7 +378,7 @@ const callbackSSS = function(tx3){
 
 }
 
-const callbackAlice = function(tx3){
+const callbackAlice = function(tx3,address){
 
 	const payload = tx3.serialize();
 	location.href = `alice://sign?data=${payload}&type=request_sign_transaction&node=${sym.Convert.utf8ToHex(nodeUrl)}&method=announce&deadline=3600`;
@@ -388,7 +388,7 @@ const callbackAlice = function(tx3){
 	socketSend(currentWebsocket,'unconfirmedAdded/' + address.plain());	
 }
 
-const callbackSelf = function(tx3){
+const callbackSelf = function(tx3,address){
 	signedTx3 = alice.sign(tx3,generationHash);
 	nodeFetch(nodeUrl + "/transactions","PUT",{"payload": signedTx3.payload }).then(res=>console.log(res));
 	socketSend(currentWebsocket,'status/'   + address.plain());
